# pa-karst-catmodel

./: .gitignore  .vercelignore  README.md  package.json  pyproject.toml  requirements.txt  vercel.json
dashboard/: app.js  build.mjs  index.html  styles.css
dashboard/downloads/: final-results-brief.md  table1_exposure_by_buffer.csv  table4_top15_munis_KHI.csv  table5_sensitivity.csv  table5_sensitivity_correlations.csv  table6_loss_proxy.csv
docs/: final-results-brief.md  project-audit.md
outputs/tables/: table2_top10_facilities.csv  table3_county_summary.csv
scripts/: 01_load_karst.py  02_facilities.py  03_exposure.py  04_khi.py  05_figures.py  06_presentation.py  run_all.py
src/: __init__.py  boundaries.py  config.py  exposure.py  facilities.py  figures.py  geo_utils.py  io_utils.py  khi.py  load_karst.py  presentation.py  shapefile_utils.py
tests/: test_exposure.py  test_geo_utils.py  test_khi.py
